Major UI/UX improvements and bug fixes
- Fixed clickability issues for account cards (Microsoft/Offline login)
- Fixed clickability for download screen cards (mod downloads)
- Added renderer selector to home screen with gradient text
- Removed debug colors and logs from production code
- Updated star logo to theme-based CS_Star_8 without tint
- Hidden settings gear icon from home screen
- Added Java 21 auto-installation for MC 1.21.8+
- Improved JRE installation verification and error handling
- Added renderer compatibility warnings for MC 1.21.8+
- Enhanced logging for game launch diagnostics
- Added fallback mechanisms for failed JRE installations
- Simplified Java version detection logic
- Added runtime validation before game launch
- Fixed card touch event handling across multiple layouts
- Improved error messages and user feedback

Known Issue:
- MC 1.21.8-1.21.11 crashes with OSMesa renderer (investigating FCL solution)